Address review: fix test hang, add enforcement test, shorten CHANGELOG
- Fix potential test hang: drain child JVM stdout on a daemon gobbler
  thread so the timeout check is always reached even if the child
  deadlocks (Copilot review comment).
- Add allAccessorClassesMustHaveStaticInitializerBlock test that
  scans ImplementationBridgeHelpers source for ensureClassInitialized
  targets and verifies each has 'static { initialize(); }' — catches
  missing blocks at build time.
- Shorten CHANGELOG entry to 1-2 lines per convention.
- Revert Spring README whitespace (only needed to trigger pipeline).

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>